test/kubernetes/e2e/features/agentgateway/extproc/testdata/extproc-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-proc-grpc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ext-proc-grpc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ext-proc-grpc
    spec:
      containers:
        - name: ext-proc-grpc
          #TODO: use a ghcr based image 
          image: sibseh/basic-sink:fix-2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: ext-proc-grpc
  labels:
    app: ext-proc-grpc
spec:
  ports:
  - port: 4444
    targetPort: 18080
    protocol: TCP
    appProtocol: kubernetes.io/h2c
  selector:
    app.kubernetes.io/name: ext-proc-grpc
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: ext-proc-extension
spec:
  type: ExtProc
  extProc:
    grpcService:
      backendRef:
        name: ext-proc-grpc
        port: 4444
